--- a/test/mtls.conf
+++ b/test/mtls.conf
@@ -8,16 +8,48 @@ events {
 }
 
 http {
+
   server {
-    listen 8000;
+    listen 8080;
 
     location / {
 
-      access_by_lua_file /opt/build/access.lua;
-      resolver 8.8.8.8;
+      access_by_lua_file /opt/test/access.lua;
+      # resolver 8.8.8.8;
 
-      proxy_pass https://mtls-server.cluster.local:8043/;
-      proxy_http_version 1.1;
+      proxy_pass https://127.0.0.1:8043/;
+      proxy_ssl_name test.com;
     }
   }
+
+
+  server {
+    listen 8081;
+
+    location / {
+      proxy_pass https://127.0.0.1:8043/;
+      proxy_ssl_name test.com;
+      proxy_ssl_certificate /opt/certs/client.crt;
+      proxy_ssl_certificate_key /opt/certs/client.key;
+      proxy_ssl_trusted_certificate /opt/certs/rootCA.pem;
+      proxy_http_version 1.1;
+      proxy_ssl_verify on;
+      proxy_ssl_verify_depth 2;
+    }
+  }
+
+  server {
+    listen 8043 ssl;
+
+    ssl_certificate /opt/certs/test.com.crt;
+    ssl_certificate_key /opt/certs/test.com.key;
+
+    ssl_client_certificate /opt/certs/rootCA.pem;
+    ssl_verify_client on;
+
+    location / {
+      return 200 'gangnam style!';
+    }
+  }
+
 }
