Enable chain client certs
When using a intermediate cert, the intermediate CA should be appended
to the client cert to allow the server to verify the signature.

Before we only used the first certificate, so things were not working
correctly.

This patched changes a bit the nginx module, plus added a few test
scripts.

Integration test to be made on APICast QE testsuite.

Signed-off-by: Eloy Coto <eloy.coto@acalustra.com>

--- a/test/mtls.conf
+++ b/test/mtls.conf
@@ -1,7 +1,7 @@
 worker_processes  1;
 master_process off;
 daemon off;
-error_log /dev/stdout error;
+error_log /dev/stdout debug;
 
 events {
   worker_connections 1024;
@@ -9,47 +9,53 @@ events {
 
 http {
 
-  server {
-    listen 8080;
-
-    location / {
-
-      access_by_lua_file /opt/test/access.lua;
-      # resolver 8.8.8.8;
-
-      proxy_pass https://127.0.0.1:8043/;
-      proxy_ssl_name test.com;
+    init_by_lua_block {
+      mtls = require("mtls")
+      mtls:init()
     }
-  }
 
+    server {
+      listen 8080;
+      location / {
+        access_by_lua_block {
+          mtls:access()
+        }
 
-  server {
-    listen 8081;
-
-    location / {
-      proxy_pass https://127.0.0.1:8043/;
-      proxy_ssl_name test.com;
-      proxy_ssl_certificate /opt/certs/client.crt;
-      proxy_ssl_certificate_key /opt/certs/client.key;
-      proxy_ssl_trusted_certificate /opt/certs/rootCA.pem;
-      proxy_http_version 1.1;
-      proxy_ssl_verify on;
-      proxy_ssl_verify_depth 2;
+       proxy_pass https://127.0.0.1:8043/;
+       proxy_ssl_name subca.acalustra.com;
+       proxy_ssl_server_name on;
+       proxy_ssl_verify_depth 100;
+      }
     }
-  }
+
+   server {
+     listen 8081;
+
+     location / {
+       proxy_pass https://127.0.0.1:8043/;
+       proxy_ssl_name subca.acalustra.com;
+       proxy_ssl_certificate /opt/certs/client_bundle.crt;
+       proxy_ssl_certificate_key /opt/certs/client.key;
+       proxy_ssl_trusted_certificate /opt/certs/rootCA.pem;
+       proxy_http_version 1.1;
+       proxy_ssl_verify on;
+       proxy_ssl_verify_depth 100;
+     }
+   }
 
   server {
     listen 8043 ssl;
 
-    ssl_certificate /opt/certs/test.com.crt;
-    ssl_certificate_key /opt/certs/test.com.key;
+    ssl_certificate /opt/certs/subca.acalustra.com.crt;
+    ssl_certificate_key /opt/certs/subca.acalustra.com.key;
 
     ssl_client_certificate /opt/certs/rootCA.pem;
     ssl_verify_client on;
+    ssl_verify_depth 1000;
 
     location / {
-      return 200 'gangnam style!';
+      echo 'ssl_client_s_dn: \$ssl_client_s_dn';
+      echo 'ssl_client_i_dn: \$ssl_client_i_dn';
     }
   }
-
 }
