--- a/test/mtls.conf
+++ b/test/mtls.conf
@@ -34,7 +34,7 @@ http {
      location / {
        proxy_pass https://127.0.0.1:8043/;
        proxy_ssl_name subca.acalustra.com;
-       proxy_ssl_certificate /opt/certs/client_bundle.crt;
+       proxy_ssl_certificate /opt/certs/client_chain.crt;
        proxy_ssl_certificate_key /opt/certs/client.key;
        proxy_ssl_trusted_certificate /opt/certs/rootCA.pem;
        proxy_http_version 1.1;
