Turn off SSL session reuse
Valgrind reports mem leak when SSL session reuse is turned on

--- a/test/mtls.conf
+++ b/test/mtls.conf
@@ -25,6 +25,7 @@ http {
        proxy_ssl_name subca.acalustra.com;
        proxy_ssl_server_name on;
        proxy_ssl_verify_depth 100;
+       proxy_ssl_session_reuse off;
       }
     }
 
@@ -37,6 +38,7 @@ http {
        proxy_ssl_certificate /opt/certs/client_chain.crt;
        proxy_ssl_certificate_key /opt/certs/client.key;
        proxy_ssl_trusted_certificate /opt/certs/rootCA.pem;
+       proxy_ssl_session_reuse off;
        proxy_http_version 1.1;
        proxy_ssl_verify on;
        proxy_ssl_verify_depth 100;
