--- a/config
+++ b/config
@@ -1,6 +1,7 @@
 ngx_module_type=HTTP
 ngx_addon_name=apicast
 ngx_module_name=ngx_http_apicast_module
-ngx_module_srcs="$ngx_addon_dir/ngx_http_apicast_module.c"
+ngx_module_srcs="$ngx_addon_dir/src/ngx_http_apicast_module.c"
+ngx_module_incs="$ngx_addon_dir/src"
 
 . auto/module
