--- a/test/mtls.conf
+++ b/test/mtls.conf
@@ -10,7 +10,7 @@ events {
 http {
 
     init_by_lua_block {
-      mtls = require("mtls")
+      mtls = require("resty.mtls")
       mtls:init()
     }
 
@@ -22,7 +22,7 @@ http {
         }
 
        proxy_pass https://127.0.0.1:8043/;
-       proxy_ssl_name subca.acalustra.com;
+       proxy_ssl_name examle.com;
        proxy_ssl_server_name on;
        proxy_ssl_verify_depth 100;
        proxy_ssl_session_reuse off;
@@ -34,7 +34,7 @@ http {
 
      location / {
        proxy_pass https://127.0.0.1:8043/;
-       proxy_ssl_name subca.acalustra.com;
+       proxy_ssl_name example.com;
        proxy_ssl_certificate /opt/certs/client_chain.crt;
        proxy_ssl_certificate_key /opt/certs/client.key;
        proxy_ssl_trusted_certificate /opt/certs/rootCA.pem;
@@ -48,8 +48,8 @@ http {
   server {
     listen 8043 ssl;
 
-    ssl_certificate /opt/certs/subca.acalustra.com.crt;
-    ssl_certificate_key /opt/certs/subca.acalustra.com.key;
+    ssl_certificate /opt/certs/example.com.crt;
+    ssl_certificate_key /opt/certs/example.com.key;
 
     ssl_client_certificate /opt/certs/rootCA.pem;
     ssl_verify_client on;
